# gemma-forge

./: .gitignore  AGENTS.md  CONTEST_READINESS.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Modelfile  PROJECT_PLAN.md  README.md  SKILL.md  SUBMISSION_DRAFT.md  forge.md  index.html  launch_forge.command  package.json  project-map.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.handoffs/: CURRENT_STATE.md  capability-aware-context-plan.md  current-session-flow-notes-20260525.md  final-push-plan.md  handoff-rotation-plan.md  html-css-validation-followups.md  js-validation-fresh-session-handoff.md  model-capability-notes.md  redo-chain-plan.md  skill-creator-plan.md  skill-depth-utilization-plan.md  skills-map-plan.md  ui-collapsible-cards-plan.md  usability-fix-plan.md
.planning/: agent-reflections.md  gemma-4-contest-build-plan.md
chat/: __init__.py  hf_token.py  server.py  tool_browse.py  tool_runtime.py  tool_screenshot.py  tool_workspace.py  workspace_scan.py
chat/templates/: index.html
docs/: harness-agent-operating-guide.md  model-downloads.json  model-provisioning.md  model-routing-proof.md  python-verification-fine-tuning.md
docs/submission-media/: README.md  demo-recording-guide.md
skills/axon/: LICENSE.txt  SKILL.md
skills/gsd/: SKILL.md
src/: __init__.py  app.py  config.py  hf_engine.py  utils.py
tests/: integration_test.py  maintenance_access_test.py  model_route_test.py  skill_routing_test.py
tools/: backup_live_state.sh  desktop_harness_action.sh  harness_service.sh  install_desktop_shortcuts.sh  oracle_hf_token_service.py  provision_clean_install.py  run_clean_install_test.sh  verify_clean_install.sh
(+203 files in other folders)
